--- a/my-project/src/page/Home.css
+++ b/my-project/src/page/Home.css
@@ -526,7 +526,6 @@ p {
 }
 @media (min-width: 1024px) {
   .nav-header {
-    margin-bottom: 120px;
     padding-top: 40px;
   }
 }
@@ -619,21 +618,18 @@ p {
 
 @media (min-width: 1024px) {
   .banner {
-    border-bottom-right-radius: 100px;
-    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 60px;
+    border-bottom-left-radius: 60px;
   }
 }
 
 .banner-inner-content {
   display: flex;
-  align-items: center;
 }
 
 @media (min-width: 1024px) {
   .banner-inner-content {
-    margin-bottom: 65px;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    gap: 20px;
   }
 }
 
@@ -1690,4 +1686,34 @@ footer .animate-link::after {
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+
+.owText{
+    text-transform:uppercase;
+    color: #4f94b2;
+    font-size: 14vw;
+    letter-spacing: 1.2vw;
+    font-weight:600;
+    text-shadow: 
+    -1px -1px 1px #efede3, 
+    0px 1px 0 #2e2e2e, 
+    0px 2px 0 #2c2c2c, 
+    0px 3px 0 #2a2a2a, 
+    0px 4px 0 #282828, 
+    0px 5px 0 #262626, 
+    0px 6px 0 #242424, 
+    0px 7px 0 #222, 
+    0px 8px 0 #202020, 
+    0px 9px 0 #1e1e1e, 
+    0px 10px 0 #1c1c1c, 
+    0px 11px 0 #1a1a1a, 
+    0px 12px 0 #181818, 
+    0px 13px 0 #161616, 
+    0px 14px 0 #141414, 
+    0px 15px 0 #121212,
+    2px 20px 5px rgba(0, 0, 0, 0.9),
+    5px 23px 5px rgba(0, 0, 0, 0.3),
+    8px 27px 8px rgba(0, 0, 0, 0.5),
+    8px 28px 35px rgba(0, 0, 0, 0.9);
 }
