--- a/my-project/src/page/Home.css
+++ b/my-project/src/page/Home.css
@@ -970,7 +970,7 @@ p {
   width: 148px;
 }
 .services {
-  border-radius: 50px;
+  border-radius: 20px;
   background-image: url('../assets/bg_courses.svg');
   background-size: cover;
   background-position: center;
@@ -1022,7 +1022,8 @@ p {
   opacity: 0.7;
 }
 .services-inner {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 60px;
 }
 @media (min-width: 1024px) {
@@ -1062,8 +1063,7 @@ p {
 }
 @media (min-width: 1280px) {
   .service-card {
-    min-height: 500px;
-    max-width: 100%;
+    min-height: 400px;
   }
 }
 .service-card-tag {
@@ -1716,4 +1716,18 @@ footer .animate-link::after {
     5px 23px 5px rgba(0, 0, 0, 0.3),
     8px 27px 8px rgba(0, 0, 0, 0.5),
     8px 28px 35px rgba(0, 0, 0, 0.9);
+}
+.bgChooseRoom{
+  background-image: url('../assets/bg_courses.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media (min-width: 1280px) {
+  .bgChooseRoom {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
