add tag for page

--- a/my-project/src/page/Home.css
+++ b/my-project/src/page/Home.css
@@ -1736,9 +1736,9 @@ footer .animate-link::after {
     padding-bottom: 200px;
   }
 }
-
+/* 
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+ */
