--- a/my-project/src/page/Home.css
+++ b/my-project/src/page/Home.css
@@ -489,22 +489,6 @@ p {
   height: 100%;
   border-bottom-right-radius: 100px;
   border-bottom-left-radius: 100px;
-  /* padding-top: 200px; */
-  padding-bottom: 200px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-@media (min-width: 640px) {
-  .section-slide {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-@media (min-width: 1024px) {
-  .section-slide {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
 }
 .subheading {
   margin-bottom: 48px;
@@ -607,28 +591,19 @@ p {
   background-position: left center;
   background-repeat: no-repeat;
   padding-top: 0px;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-
-@media (min-width: 640px) {
-  .banner {
-    padding-bottom: 65px;
-  }
-}
-
 @media (min-width: 1024px) {
   .banner {
     border-bottom-right-radius: 100%;
     border-bottom-left-radius: 100%;
   }
 }
-
 .banner-inner-content {
   display: flex;
 }
-
 @media (min-width: 1024px) {
   .banner-inner-content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -704,6 +679,7 @@ p {
   margin-right: auto;
   margin-bottom: 80px;
   max-width: 600px;
+  align-items: center;
 }
 
 @media (min-width: 1024px) {
@@ -756,34 +732,17 @@ p {
   }
 }
 .banner-stats {
-  /* margin-left: auto;
-  margin-right: auto; */
   display: grid;
   max-width: 700px;
-  /* row-gap: 70px; */
   border-radius: 50px;
   --tw-bg-opacity: 1;
   background-color: rgb(248 239 229 / var(--tw-bg-opacity));
-  /* padding: 40px;
-  padding-top: 50px;
-  padding-bottom: 50px; */
   text-align: center;
 }
-
-/* @media (min-width: 640px) {
-  .banner-stats {
-    padding-left: 80px;
-    padding-right: 80px;
-  }
-} */
-
 @media (min-width: 1024px) {
   .banner-stats {
     display: flex;
     max-width: 100%;
-    /* justify-content: space-between; */
-    /* -moz-column-gap: 70px;
-         column-gap: 70px; */
   }
 }
 
@@ -822,25 +781,13 @@ p {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.syllabus {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-@media (min-width: 1024px) {
-  .syllabus {
-    padding-top: 200px;
-    padding-bottom: 200px;
-  }
-}
-
 .syllabus-inner {
   margin-left: auto;
   margin-right: auto;
   display: grid;
   max-width: 800px;
   align-items: center;
-  row-gap: 80px;
+  gap: 32px;
 }
 @media (min-width: 1280px) {
   .syllabus-inner {
@@ -1185,18 +1132,15 @@ p {
 }
 .reviews {
   padding-top: 100px;
-  padding-bottom: 100px;
 }
 @media (min-width: 640px) {
   .reviews {
     padding-top: 150px;
-    padding-bottom: 150px;
   }
 }
 @media (min-width: 1024px) {
   .reviews {
     padding-top: 200px;
-    padding-bottom: 200px;
   }
 }
 .reviews-header {
