--- a/my-project/src/page/Home.css
+++ b/my-project/src/page/Home.css
@@ -584,8 +584,8 @@ p {
   padding-bottom: 17px;
 }
 .banner {
-  border-bottom-right-radius: 100%;
-  border-bottom-left-radius: 100%;
+  border-bottom-right-radius: 0%;
+  border-bottom-left-radius: 0%;
   background-image: url('../assets/hero.svg');
   background-size: cover;
   background-position: left center;
@@ -595,12 +595,12 @@ p {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   .banner {
     border-bottom-right-radius: 100%;
     border-bottom-left-radius: 100%;
   }
-}
+} */
 .banner-inner-content {
   display: flex;
 }
@@ -734,7 +734,7 @@ p {
 .banner-stats {
   display: grid;
   max-width: 700px;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   --tw-bg-opacity: 1;
   background-color: rgb(248 239 229 / var(--tw-bg-opacity));
   text-align: center;
@@ -791,6 +791,8 @@ p {
 }
 @media (min-width: 1280px) {
   .syllabus-inner {
+    margin-top: 30px;
+    margin-bottom: 30px;
     max-width: 100%;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     -moz-column-gap: 30px;
@@ -953,6 +955,7 @@ p {
   .services-header {
     flex-direction: row;
     text-align: left;
+    margin-left: 10px;
   }
 }
 .service-card-head {
@@ -984,6 +987,7 @@ p {
     grid-template-columns: repeat(3, minmax(0, 1fr));
     display: flex;
     flex-direction: row;
+    margin: 10px;
   }
 }
 .service-card {
@@ -1131,9 +1135,10 @@ p {
   width: 700px;
 }
 .reviews {
-  padding-top: 100px;
+  background-color: #EBC7B5;
+  padding-top: 30px;
 }
-@media (min-width: 640px) {
+/* @media (min-width: 640px) {
   .reviews {
     padding-top: 150px;
   }
@@ -1142,7 +1147,7 @@ p {
   .reviews {
     padding-top: 200px;
   }
-}
+} */
 .reviews-header {
   text-align: center;
 }
@@ -1190,6 +1195,7 @@ p {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .b-alt {
+  background-color: #EBC7B5;
   padding: 0px;
 }
 @media (min-width: 1024px) {
@@ -1424,9 +1430,9 @@ p {
     display: block;
   }
 }
-footer {
+/* footer {
   padding-top: 4vh;
-}
+} */
 .footer-top {
   display: flex;
   flex-direction: column;
