--- a/my-project/src/page/Login.css
+++ b/my-project/src/page/Login.css
@@ -117,7 +117,7 @@
     flex-direction: column;
     background-image: url('../assets/mobile-background.png');
     background-size: cover;
-    background-position: ;
+    background-position: center;
     height: 100%;
     /* gap: 5rem; */
     align-items: center;
